# lang01

./: CMakeLists.txt  README.md  ex.hpp  libs.hpp  main.cpp  main.hpp  nodes.hpp  tokens.hpp  utils.hpp  vm-main.cpp  vm.hpp
assem/: assembler.cpp  assembler.hpp
nodes/: any_node.cpp  any_node.hpp  basic_node.cpp  basic_node.hpp  call_op.cpp  call_op.hpp  context.cpp  context.hpp  every_node.cpp  every_node.hpp  no_op.cpp  no_op.hpp  parser.cpp  parser.hpp  program_decl.cpp  program_decl.hpp  test.cpp
test/: main.lang01
tests/: lexes_each_token.lang01  main.lang01
tokens/: any_token.cpp  any_token.hpp  basic_token.cpp  basic_token.hpp  comment.cpp  comment.hpp  empty.cpp  empty.hpp  every_token.cpp  every_token.hpp  flags.hpp  identifier.cpp  identifier.hpp  invalid.cpp  invalid.hpp  lexer.cpp  lexer.hpp  lineend.cpp  lineend.hpp  linestart.cpp  linestart.hpp  test.cpp  tokenizer.cpp  tokenizer.hpp  whitespace.cpp  whitespace.hpp
utils/: argsview.cpp  argsview.hpp  colors.cpp  colors.hpp  misc.cpp  misc.hpp  source.cpp  source.hpp
vm/: any_value.cpp  any_value.hpp  every_value.cpp  every_value.hpp  frame.cpp  frame.hpp  function.cpp  function.hpp  instruction.cpp  instruction.hpp  interpreter.cpp  interpreter.hpp
